# secure-settlement-reporting

./: .gitignore  CMakeLists.txt  Makefile  README.md  base_gen.py  base_mem.sh  gen.py  ifshow.sh  mem.sh  submission_bits.txt  submission_bits_a.txt  submission_bits_b.txt  submissions.txt
benchmark/: results_100k.txt  results_1k.txt  results_200k.txt  results_5k.txt  results_hw.txt
test/: base_parser.cpp  parser.cpp  ssrep.cpp  utils.cpp
